k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plausible
  labels:
    name: plausible
    environment: production
