k8s/11-https-redirect-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: plausible
spec:
  redirectScheme:
    scheme: https
    permanent: true
