k8s/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: plausible
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  selector:
    app: postgres
