k8s/10-plausible-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible
  namespace: plausible
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  selector:
    app: plausible
